--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
-<title>
-website
-</title>
+<head>
+<title> Ethan jago portfolio </title>
+<link rel="icon" href="img/icon.png">
+<link rel="stylesheet" type="text/css" 
+href = Site.css>
+</head>
 <body>
-yeet
+<div class = Bar>
+<p>aasdasdasd</p>
+</div>
 </body>
+<footer>
+</footer>
 </html>
