--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 <head>
 <title> Ethan jago portfolio </title>
+<link rel="icon" href="img/icon.png">
+<link rel="stylesheet" type="text/css" 
+href = Site.css>
 </head>
 <body>
+<div class = Bar>
 <p>aasdasdasd</p>
 </div>
 </body>
