--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
 <head>
 <title> Ethan jago portfolio </title>
-<link rel="icon" href="img/icon.png">
-<link rel="stylesheet" type="text/css" 
-href = Site.css>
+<link rel="stylesheet" href = "Site.css"/>
 </head>
 <body>
 <div class = Bar>
