--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href = "Site.css"/>
 </head>
 <body>
-<p>aasdasdasd</p>
+<p>This is website</p>
 </body>
 <footer>
 </footer>
