--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 <head>
 <title> Ethan jago portfolio </title>
+<link rel="icon" href="img/icon.png">
 <link rel="stylesheet" href = "Site.css"/>
 </head>
 <body>
-<p>This is website</p>
+<div class = Bar>
+<p>aasdasdasd</p>
+</div>
 </body>
 <footer>
 </footer>
