--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title> Ethan jago portfolio </title>
-<link rel="icon" href="img/icon.png">
+<link rel="icon" href="icon.png">
 <link rel="stylesheet" href = "Site.css"/>
 </head>
 <body>
