--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title> Ethan jago portfolio </title>
+<link rel="shortcut icon" type="image/png" href="favicon.png">
 <link rel="stylesheet" href = "Site.css"/>
 </head>
 <body>
