--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <div class = Bar>
 <p>Ethan Jago's</p>
 </div>
+<div class=thisismywebsite>
+  <p> Website</p>
+  </div>
 </body>
 <footer>
 </footer>
