--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <title> Ethan jago portfolio </title>
 <link rel="shortcut icon" type="image/png" href="favicon.png">
 <link rel="stylesheet" href = "Site.css"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0"
 </head>
 <body>
 <div class = Bar>
-<p>Ethan Jago's</p>
+<p style="font-size: 10vw;">Ethan Jago's</p>
 </div>
 <div class = thisismywebsite>
   <p> Website</p>
