--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p style="font-size: 5vw;">Ethan Jago's</p>
 </div>
 <div class = thisismywebsite>
-  <p> Website</p>
+  <p style="font-size: 3vw;"> Website</p>
   </div>
 </body>
 <footer>
