--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 <div class = thisismywebsite>
   <p style="font-size: 3vw;"> Website</p>
   </div>
+  <nav>
+    
+    <ul>
+      <li><a href="index.html">img src="dropdown"</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+         <li><a href="#">Projects</a></li>
+         <li><a href="#">Placeholder</a></li>
+         <li><a href="#">Placeholder</a></li>
+        </ul>
+      </li>
+         </ul>
+  </nav>
 </body>
 <footer>
 </footer>
