--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav>
     
     <ul>
-      <li><a href="index.html"><img src="dropdown"></a>
+      <li><a href="index.html"><img src="Dropdown.png"></a>
       <ul>
         <li><a href="index.html">Home</a></li>
          <li><a href="#">Projects</a></li>
