--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav>
     
     <ul>
-      <div class = dropdown><li><img src="Dropdown .png"></a> </div>
+      <div class = dropdown><li><b>Placeholder</b></a> </div>
       <ul>
         <li><a href="index.html">Home</a></li>
          <li><a href="#">Projects</a></li>
