--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <p style="font-size: 3vw;"> Website</p>
   </div>
   <nav>
-      <ul>
+    <div class = tabs>  <ul>
         <li><a href="index.html">Home</a></li>
          <li><a href="#">Projects</a></li>
          <li><a href="#">Placeholder</a></li>
          <li><a href="#">Placeholder</a></li>
         </ul>
-   
+    </div>
         
   </nav>
 </body>
