--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <li><a href="#">Projects</a></li>
        <li><a href="index.html">Home</a></li> 
         </ul>
-
-        
   </nav>
+  
+  <h1> About Me </h1>
 </body>
 <footer>
 </footer>
