--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <li><a href="index.html">Home</a></li> 
         </ul>
   </nav>
- <div class = header>About Me</div>
+ <div class = headers>About Me</div>
  <div class = content>asdasdasdasd</div>
 </body>
 <footer>
