--- a/Projects.html
+++ b/Projects.html
@@ -1,1 +1,25 @@
-
+<html>
+ <head>
+<title> Ethan jago portfolio </title>
+<link rel="shortcut icon" type="image/png" href="favicon.png">
+<link rel="stylesheet" href = "Site.css"/>
+</head>
+<body>
+ <div class = Bar>
+<p style="font-size: 5vw;">Ethan Jago's</p>
+</div>
+<div class = thisismywebsite>
+  <p style="font-size: 3vw;"> Website</p>
+  </div>
+  <nav>
+     <ul>     
+         <li><a href="#">Placeholder</a></li>
+         <li><a href="#">Placeholder</a></li>
+        <li><a href="#">Projects</a></li>
+       <li><a href="index.html">Home</a></li> 
+        </ul>
+  </nav>
+  </body>
+<footer>
+</footer>
+</html>
