--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <ul>     
          <li><a href="#">Placeholder</a></li>
          <li><a href="#">Placeholder</a></li>
-        <li><a href="Projects.html">Projects</a></li>
+        <li><a href="Error.html">Projects</a></li>
        <li><a href="index.html">Home</a></li> 
         </ul>
   </nav>
