--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
  <div class = headers>About Me</div>
 
- <div class = branch>Education</div>
+ <div class = branch> My name is Ethan Kobe Jago. I have been attending Le Jardin Academy, a private IB school, since pre-kindergarden.</div>
 </body>
 <footer>
 </footer>
