--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
   </nav>
  <div class = headers>About Me</div>
 
- <div class = branch> My name is Ethan Kobe Jago. I have been attending Le Jardin Academy, a private IB school, since pre-kindergarden.</div>
+ <div class = branch> My name is Ethan Kobe Jago. I have been attending Le Jardin Academy, a private IB school, since pre-kindergarden.
+ <br> At the time of this writing, I am a high school junior, and enrolled in High level Chemistry, High level Business,
+  <br> High level English, Standard level Computer science, Standard level Mathematics, Ab-initio Spanish, and Theory of Knowledge.
+  
+ 
+ 
+ </div>
 </body>
 <footer>
 </footer>
