--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href = "Site.css"/>
 </head>
 <body>
+ <div class = temp> Under Construction!</div>
  <div class = Bar>
 <p style="font-size: 5vw;">Ethan Jago's</p>
 </div>
