--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   <div class = temp> Under Construction!</div>
   <nav>
      <ul>     
-        <div class ="dropdown"> <button class ="dropbtn"> <li><a href="#">Placeholder</a></li>
+        <li><a href="#">Placeholder</a></li>
+      <ul>
+       <li><a href="#">Placeholder</a></li>
+      </ul>
          <li><a href="#">Placeholder</a></li>
         <li><a href="Error.html">Projects</a></li>
        <li><a href="index.html">Home</a></li> 
