--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
   <div class = temp> Under Construction!</div>
   <nav>
      <ul>     
-        <li><a href="#">Placeholder</a></li>
+        <li><a href="#">Academics</a></li>
       <ul>
-       <li><a href="#">Placeholder</a></li>
+         <li><a href="#">Community engagement </a></li>
+         <li><a href="#">Global Understanding </a></li>
+         <li><a href="#">Intercultural Communication </a></li>
+       <li><a href="#">Random Town </a></li>
+       <li><a href="#">Creativity</a></li>
       </ul>
-         <li><a href="#">Placeholder</a></li>
+         <li><a href="#">Wellness</a></li>
         <li><a href="Error.html">Projects</a></li>
        <li><a href="index.html">Home</a></li> 
         </ul>
