--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <nav>
      <ul>     
         <li><a href="#"></a></li>
-      <ul>
-      </ul>
-         <li><a href="#"></a>CAS</li>
+         <li><a href="CAS.html"></a>CAS</li>
         <li><a href="Error.html">Projects</a></li>
        <li><a href="index.html">Home</a></li> 
         </ul>
