--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class = temp> Under Construction!</div>
   <nav>
      <ul>     
-         <li><a href="CAS.html"></a></li>
+         <li><a href="CAS.html">CAS</a></li>
         <li><a href="Error.html">Projects</a></li>
        <li><a href="index.html">Home</a></li> 
         </ul>
