--- a/CAS.html
+++ b/CAS.html
@@ -1,1 +1,18 @@
-
+<html>
+ <head>
+<title> Ethan jago portfolio </title>
+<link rel="shortcut icon" type="image/png" href="favicon.png">
+<link rel="stylesheet" href = "Site.css"/>
+</head>
+<body>
+     <nav>
+     <ul>     
+         <li><a href="index.html">Home</a></li>
+        <li><a href="Error.html">Projects</a></li>
+       <li><a href="index.html">Home</a></li> 
+        </ul>
+  </nav>
+</body>
+<footer>
+</footer>
+</html>
