--- a/CAS.html
+++ b/CAS.html
@@ -12,6 +12,11 @@
        <li><a href="index.html">Home</a></li> 
         </ul>
   </nav>
+ <id ="words"> 
+  Community engagement <br>
+  Project Management <br>
+  Independent learning<br>
+  Athletics <br>
 </body>
 <footer>
 </footer>
