--- a/CAS.html
+++ b/CAS.html
@@ -12,11 +12,12 @@
        <li><a href="index.html">Home</a></li> 
         </ul>
   </nav>
- <id ="words"> 
+<h2 id ="words"> 
   Community engagement <br>
   Project Management <br>
   Independent learning<br>
   Athletics <br>
+ </h2>
 </body>
 <footer>
 </footer>
